--- a/ProAss17/ProAss17.vcxproj
+++ b/ProAss17/ProAss17.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{2d08a3d6-977a-4c20-984d-e811e41286d4}</ProjectGuid>
     <RootNamespace>ProAss17</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>ProAss17-18</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -127,7 +128,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ProAss17.c" />
+    <ClCompile Include="ProAss17-18.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
