--- a/ProAss17/ProAss17.vcxproj.filters
+++ b/ProAss17/ProAss17.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ProAss17.c">
+    <ClCompile Include="ProAss17-18.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
